# fuel-ev-ai

./: .env  .gitignore  Cargo.toml  Readme.md  Trunk.toml  build.rs  canister_ids.json  default.nix  dfx.json  index.html  rustc-ice-2024-11-05T04_42_03-2858.txt  tailwind.config.js
.github/workflows/: deploy.yml  deploy_action.yml
.well-known/: ic-domains  ii-alternative-origins
declarations/asset/: index.js
declarations/asset_proxy/: asset_proxy.did.d.ts  asset_proxy.did.js  index.d.ts  index.js
declarations/icp_ledger/: icp_ledger.did.d.ts  icp_ledger.did.js
declarations/provision/: index.d.ts  index.js  provision.did.d.ts  provision.did.js
declarations/token/: token.did  token.did.d.ts  token.did.js
did/: asset_proxy.did  backend.did  canister_ids.json  provision.did  token.did
scripts/: build.sh  local_deploy.sh
src/: admin_routes.rs  components.rs  constants.rs  main.rs  stores.rs  time.rs
src/auth/: auth.rs  mod.rs
src/backend/: canister_manager.rs
src/components/: account.rs  car_rental.rs  collection_documents.rs  collection_header.rs  collection_images.rs  collection_info_cards.rs  documents.rs  footer.rs  header.rs  header2.rs  home_banner.rs  info_title.rs  invest_info.rs  powered_by.rs  ride_sharing.rs  ridesharing_info.rs  specifications.rs  tabs.rs  trip_includes.rs
src/components/admin/: basic_info.rs  collection_info.rs  documents_info.rs  images_info.rs  invest_info_admin.rs  mod.rs
src/consts/: mod.rs
src/outbound/: accept_or_reject_sale.rs  add_collection_canister_calls.rs  admin_check.rs  collection_canister_calls.rs  get_pending_collection_requests.rs  mod.rs
src/pages/: collection_detail.rs  collections.rs  home.rs  investors_business.rs  login.rs  mod.rs
src/pages/admin/: auth.rs  check_admin.rs  collection_list.rs  manage_collection.rs  mod.rs  new_collection.rs
src/state/: admin.rs  asset_manager.rs  auth.rs  auth_actions.rs  canisters.rs  mod.rs  nft_canister.rs  nft_state.rs  sale_status.rs
src/stores/: agent.rs  auth_client.rs
src/utils/: button.rs  file_type.rs  go_back_and_come_back.rs  host.rs  ic.rs  input.rs  invest_popup.rs  mod.rs  overlay.rs  parent_resource.rs  plus_icon.rs  share.rs  time.rs  web.rs
style/: output.css  tailwind.css
(+5 files in other folders)
